[gd_scene load_steps=3 format=3 uid="uid://c80rhv7a31hkp"]

[ext_resource type="FontFile" uid="uid://dwvjj064g1420" path="res://fonts/Xolonium-Regular.ttf" id="1_dcqmh"]
[ext_resource type="Script" path="res://hud.gd" id="1_qaf7l"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_qaf7l")

[node name="scoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 81.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.992157, 0.992157, 0.992157, 1)
theme_override_fonts/font = ExtResource("1_dcqmh")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="message" type="Label" parent="."]
custom_minimum_size = Vector2(1280, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -205.0
offset_top = -69.0
offset_right = 212.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_dcqmh")
theme_override_font_sizes/font_size = 64
text = "Doge creepy men!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="startButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.5
offset_top = -140.0
offset_right = 111.5
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_dcqmh")
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="messageTimer" type="Timer" parent="."]

[node name="notes" type="Label" parent="."]
custom_minimum_size = Vector2(1280, 0)
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 120.0
offset_top = -280.0
offset_right = 1400.0
offset_bottom = -199.0
grow_vertical = 2
theme_override_colors/font_color = Color(0.670588, 0.537255, 0.87451, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_dcqmh")
theme_override_font_sizes/font_size = 32
text = "You are a innocent girl.."
vertical_alignment = 1
autowrap_mode = 2

[node name="notesTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="pressed" from="startButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="messageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="timeout" from="notesTimer" to="." method="_on_notes_timer_timeout"]
